# pypi-duck-flow

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  env.template  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/node-container/: devcontainer.json
.devcontainer/python-container/: devcontainer.json
.github/workflows/: build-publish.yaml  pipeline-ingest.yml
dashboard/: evidence.config.yaml  evidence.plugins.yaml  next.config.ts  package-lock.json  package.json  vercel.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/api/stats/: route.ts
dashboard/components/: adoption-area-chart.tsx  country-bar-chart.tsx  daily-downloads-chart.tsx  dashboard-footer.tsx  dashboard-header.tsx  dashboard.tsx  downloads-line-chart.tsx  kpi-cards.tsx  monthly-table.tsx  period-selector.tsx  python-bar-chart.tsx  theme-toggle.tsx  version-bar-chart.tsx
dashboard/lib/: format.ts  motherduck.ts  queries.ts  types.ts
dashboard/pages/: +layout.svelte  index.md
dashboard/sources/motherduck/: connection.yaml  downloads_by_version.sql  monthly_download.sql  refresh_date.sql  weekly_download.sql
ingestion/: bigquery.py  duck.py  models.py  motherduck.py  pipeline.py
ingestion/tests/: sample_file_downloads.csv  test_duck.py  test_models.py  test_motherduck.py
tests/ingestion/: test_models.py
transform/pypi_metrics/: .user.yml  dbt_project.yml  package-lock.yml  packages.yml  profile.yml  profiles.yml
transform/pypi_metrics/macros/: export_partition_data.sql
transform/pypi_metrics/models/: pypi_daily_stats.sql  schema.yml  sources.yml
transform/pypi_metrics/tests/: test_pypi_daily_stats.sql
