[tool.poetry]
name = "pypi-duck-flow"
version = "0.1.0"
description = ""
authors = ["Mehdi Ouazza <mehdi@mehd.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
duckdb = "^1.1.3"
fire = "^0.5.0"
google-cloud-bigquery = "3.25.0"
loguru = "^0.7.2"
google-auth = "^2.24.0"
pydantic = "^2.7.4"
db-dtypes = "^1.1.1"
pyarrow = "17.0.0"
google-cloud-bigquery-storage = "2.26"
dbt-duckdb = {version = "1.8.1"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
# google warning https://github.com/googleapis/google-cloud-python/issues/11184
filterwarnings = [
    "ignore:Deprecated call to `pkg_resources\\.declare_namespace\\('.*'\\):DeprecationWarning",
    "ignore::DeprecationWarning:google.rpc",
]
