[project]
name = "pypi-duck-flow"
version = "0.1.0"
description = ""
authors = ["Mehdi Ouazza <mehdi@mehd.io>"]
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "duckdb==1.2.2",
    "fire>=0.5.0,<1.0.0",
    "loguru>=0.7.2,<1.0.0",
    "pydantic>=2.7.4,<3.0.0",
    "db-dtypes>=1.1.1,<2.0.0",
    "dbt-duckdb==1.9.3",
]

[tool.pytest.ini_options]
# google warning https://github.com/googleapis/google-cloud-python/issues/11184
filterwarnings = [
    "ignore:Deprecated call to `pkg_resources\\.declare_namespace\\('.*'\\):DeprecationWarning",
    "ignore::DeprecationWarning:google.rpc",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.8.1",
]
